--- a/friends.html
+++ b/friends.html
@@ -3,7 +3,7 @@
 <head>
 <title>Show & Share Homepage</title>  
 <script> 
-    window.onload = function() {
+   window.onload = function() {
     const entries = JSON.parse(localStorage.getItem('entries')) || [];
     const entryList = document.getElementById('entryList');
     entryList.innerHTML = ''; 
@@ -295,31 +295,33 @@ function showInfo(title, file) {
 }
 </script>
 <hr>
-<div class="preserve-line-breaks">
-<h2>Want to leave your own review?</h2>
-<h3>Enter a personalized review down below.
-It'll get saved directly to this page for everyone to see!</h3>
-</div>
-<button onclick="window.location.href='your-review.html'" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Create New Entry</button>
+    <div class="preserve-line-breaks">
+        <h2>Want to leave your own review?</h2>
+        <h3>Enter a personalized review down below.
+        It'll get saved directly to this page for everyone to see!</h3>
+    </div>
+    <button onclick="window.location.href='your-review.html'" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Create New Entry</button>
 
     <div id="output">
         <hr>
         <h2>Entries:</h2>
-        <ol id="entryList" style="font-family: Georgia, Serif; font-size: 30px; color: #621621; text-align: center; margin: auto;"></ol>
+        <ol id="reviewList" style="font-family: Georgia, Serif; font-size: 30px; color: #621621; text-align: center; margin: auto;"></ol>
     </div>
 
-    <script>
+<script>
+        // Function to handle form submission and saving reviews to localStorage
         const form = document.getElementById('entryForm');
-
+        
         form.addEventListener('submit', function(event) {
-            event.preventDefault(); 
+            event.preventDefault();
             const entryInput = document.getElementById('entryInput').value;
-
+            const showName = "Friends"; // Ensure this is dynamic for each show
+            
             if (entryInput.trim() !== "") {
-                const entries = JSON.parse(localStorage.getItem('entries')) || [];
+                const entries = JSON.parse(localStorage.getItem(showName)) || [];
                 entries.push(entryInput);
-                localStorage.setItem('entries', JSON.stringify(entries));
-                window.location.href = 'friends.html';
+                localStorage.setItem(showName, JSON.stringify(entries));
+                window.location.href = `${showName.toLowerCase().replace(/\s/g, '')}.html`; // Redirect back to the show-specific page
             }
         });
     </script>
